@@ -1,3 +1,8 @@
+2014-10-03  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Better code organisation and protection against out-of-bounds
+	array accesses in log-bicubic interpolator.
+
 2014-08-28  Graeme Watt  <graeme.watt@durham.ac.uk>
 
 	* Fallback to bilinear interpolator if using bicubic
